package Structural.Decorator.AbstractClasses;

public abstract class BasePizza {
    public abstract int cost();
}
