package Structural.Decorator.AbstractClasses;

public abstract class BaseToppings extends BasePizza{
    
}