package Structural.Decorator.Classes;

import Structural.Decorator.AbstractClasses.BasePizza;

public class CapsicumPizza extends BasePizza{
    
    @Override
    public int cost(){
        return 150;
    }
}
