package Structural.Decorator.Classes;

import Structural.Decorator.AbstractClasses.BasePizza;

public class FarmHousePizza extends BasePizza{

    @Override
    public int cost() {
        return 200;
    }
}
