package Structural.Decorator.Classes;

import Structural.Decorator.AbstractClasses.BasePizza;

public class VegDelightPizza extends BasePizza{
    
    @Override
    public int cost(){
        return 180;
    }
}
